--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,10 @@
   text-align: center;
 }
 
-.Button {
-  background-color: white;
-  font: inherit;
-  border: 1px solid blue;
-  padding: 8px;
-  cursor: pointer
+.red {
+  color: red;
+}
+
+.bold {
+  font-weight: bold;
 }
